--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "react-draft-wysiwyg",
-  "version": "1.12.11",
+  "name": "@nodejh/react-draft-wysiwyg",
+  "version": "0.0.1",
   "description": "A wysiwyg on top of DraftJS.",
   "main": "dist/react-draft-wysiwyg.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jpuri/react-draft-wysiwyg.git"
+    "url": "git+https://github.com/nodejh/react-draft-wysiwyg.git"
   },
   "author": "Jyoti Puri",
   "devDependencies": {
@@ -62,16 +62,13 @@
     "draft-js": "^0.10.x",
     "immutable": "3.x.x || 4.x.x",
     "react": "0.13.x || 0.14.x || ^15.0.0-0 || 15.x.x || ^16.0.0-0 || 16.x.x",
-    "react-dom":
-      "0.13.x || 0.14.x || ^15.0.0-0 || 15.x.x || ^16.0.0-0 || 16.x.x"
+    "react-dom": "0.13.x || 0.14.x || ^15.0.0-0 || 15.x.x || ^16.0.0-0 || 16.x.x"
   },
   "scripts": {
     "clean": "rimraf dist",
-    "build:webpack":
-      "cross-env NODE_ENV=production webpack --config config/webpack.config.js",
+    "build:webpack": "cross-env NODE_ENV=production webpack --config config/webpack.config.js",
     "build": "npm run clean && npm run build:webpack",
-    "test":
-      "cross-env BABEL_ENV=test mocha --compilers js:config/test-compiler.js config/test-setup.js src/**/*Test.js",
+    "test": "cross-env BABEL_ENV=test mocha --compilers js:config/test-compiler.js config/test-setup.js src/**/*Test.js",
     "lint": "eslint src",
     "lintdocs": "eslint docs/src",
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
@@ -79,5 +76,12 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/nodejh/react-draft-wysiwyg/issues"
+  },
+  "homepage": "https://github.com/nodejh/react-draft-wysiwyg#readme",
+  "directories": {
+    "doc": "docs"
+  }
 }
